# zot

./: README.md  WORKSPACE  go.mod  go.sum
cmd/zot/: main.go  main_test.go
examples/: access-config.json  config-example.json
internal/: app.go
internal/client/: run.go
internal/server/: run.go
internal/standalone/: run.go
internal/standalone/config/: config.go
pkg/api/: BUILD.bazel  access.go  auth.go  config.go  controller_test.go  routes.go
pkg/cli/: BUILD.bazel  configCmd.go  configCmd_test.go  cveCmd.go  cveCmd_test.go  cveSearchService.go  cveSearchers.go  listCmd.go  listCmd_test.go  root.go  root_test.go  searchCmd.go
pkg/compliance/v1_0_0/: check.go
pkg/extensions/accesscontrol/: BUILD.bazel  accesscontrol.go  accesscontrol_test.go
pkg/extensions/search/: resolver.go
pkg/extensions/search/cve/: BUILD.bazel  cve.go  cve_test.go  models_test.go
pkg/server/: listen.go  wire_gen.go
